src/test/deca/context/valid/class/method/from_other_class.deca
// Description:
//    Surcharge de méthode dans la même classe
//
// Résultats:
//    Aucune erreur

class A {

}

class C {
	void m() {
		A a;
	}

	void m(int A) {
		return new A();
	}
}

{

}
