src/test/deca/context/invalid/class/method/double_decl.deca
// Description:
//      Double déclaration de méthode avec même retour
//
// Resultats:
//      double definition of method m

class C {
	int m() {
	}

	int m() {
	}
}

{

}
